fixtures/cs-hash-03/bad/pbkdf2-low-iterations-sha256.ts
import { pbkdf2Sync } from "crypto";

export function hashPassword(password: string, salt: string) {
	return pbkdf2Sync(password, salt, 1000, 32, "sha256");
}
